add images in env, inno, soc

--- a/domain_pages/innovation.html
+++ b/domain_pages/innovation.html
@@ -263,12 +263,12 @@
                                     VISION </h3>
                                 <div class="col-md-6 col-sm-12">
 
-                                    <p id="whatText">
+                                    <p id="whatTextDomains">
                                         The vision of this project is to cultivate the seed of science among the young brains of our country, for this we conduct sessions with the students to impart practical knowledge by demonstration of  various experiments.
                                     </p>
                                 </div>
                                 <div class="col-md-6 col-sm-12" style="text-align:center">
-                                    <img src="images/logo.png" id="aboutTeam1">
+                                    <img src="../images/projects/Science Seeds/image4.jpg" id="aboutTeam1">
                                 </div>
                             </div>
                             <hr style="width: 75%; margin-left: 12.5%;">
@@ -276,12 +276,12 @@
                                 <h3 class="head" id="about_head" style="font-family: 'Varela Round', sans-serif;">
                                     DESCRIPTION</h3>
                                 <div class="col-md-6 col-sm-12">
-                                    <img src="images/About Team.JPG" id="aboutTeam">
+                                    <img src="../images/projects/Science Seeds/image1.jpg" id="aboutTeam">
                                 </div>
 
                                 <div class="col-md-6 col-sm-12">
 
-                                    <p id="whatText">
+                                    <p id="whatTextDomains">
                                         IIT Delhi students visit nearby slums on weekends to show children science activities and spark their curiosity. We asked volunteers to film videos explaining science experiments and DIY projects to better comprehend the topics. In partnership with SSF, we conducted live sessions of volunteers and students describing the science experiment. We held a countrywide virtual scientific model making competition, 'Ingenious Geeks,' for high school students in grades 8-12. They were invited to tackle some of society's most notable problems by proposing a solution and making a model based on it. We plan to go on field trips to nearby villages and demonstrate some DIY experiments. We also hope to host some activities on campus to explore their innovative abilities, and hold Ingenious Geeks 2.0 for high school and university students.
                                     </p>
                                 </div>
@@ -292,16 +292,20 @@
                                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
                                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
                                 </div>
                                 <div class="carousel-inner">
                                   <div class="carousel-item active">
-                                    <img src="../images/vidya1.png" class="d-block w-100" alt="...">
+                                    <img src="../images/projects/Science Seeds/image1.jpg" class="d-block w-100" alt="...">
                                   </div>
                                   <div class="carousel-item">
-                                    <img src="../images/vidya2.png" class="d-block w-100" alt="...">
+                                    <img src="../images/projects/Science Seeds/image2.png" class="d-block w-100" alt="...">
                                   </div>
                                   <div class="carousel-item">
-                                    <img src="../images/vidya3.png" class="d-block w-100" alt="...">
+                                    <img src="../images/projects/Science Seeds/image3.jpg" class="d-block w-100" alt="...">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="../images/projects/Science Seeds/image4.jpg" class="d-block w-100" alt="...">
                                   </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -329,12 +333,12 @@
                                     VISION </h3>
                                 <div class="col-md-6 col-sm-12">
 
-                                    <p id="whatText">
+                                    <p id="whatTextDomains">
                                         Social Innovation Cell is most appropriately a blend of the two terms that we all relate to, NSS and IIT Delhi. We at the Social Innovation Cell aim to apply technical knowledge and design new techniques to provide innovative solutions for the problems faced by society and for the conservation of resources. We try to achieve this aim by motivating and training the IIT Delhi student population to innovate for societal well-being.
                                     </p>
                                 </div>
                                 <div class="col-md-6 col-sm-12" style="text-align:center">
-                                    <img src="images/logo.png" id="aboutTeam1">
+                                    <img src="../images/projects/SIC/image2.jpg" id="aboutTeam1">
                                 </div>
                             </div>
                             <hr style="width: 75%; margin-left: 12.5%;">
@@ -342,12 +346,12 @@
                                 <h3 class="head" id="about_head" style="font-family: 'Varela Round', sans-serif;">
                                     DESCRIPTION</h3>
                                 <div class="col-md-6 col-sm-12">
-                                    <img src="images/About Team.JPG" id="aboutTeam">
+                                    <img src="../images/projects/SIC/image1.jpg" id="aboutTeam">
                                 </div>
 
                                 <div class="col-md-6 col-sm-12">
 
-                                    <p id="whatText">
+                                    <p id="whatTextDomains">
                                         Student incubation cell is a project which aims to find innovative solutions towards social problems. Through different technological methods and ideas problems in the society are solved and it makes a standard to create something beneficial for the society.
                                     </p>
                                 </div>
@@ -361,13 +365,13 @@
                                 </div>
                                 <div class="carousel-inner">
                                   <div class="carousel-item active">
-                                    <img src="../images/vidya1.png" class="d-block w-100" alt="...">
+                                    <img src="../images/projects/SIC/image1.jpg" class="d-block w-100" alt="...">
                                   </div>
                                   <div class="carousel-item">
-                                    <img src="../images/vidya2.png" class="d-block w-100" alt="...">
+                                    <img src="../images/projects/SIC/image2.jpg" class="d-block w-100" alt="...">
                                   </div>
                                   <div class="carousel-item">
-                                    <img src="../images/vidya3.png" class="d-block w-100" alt="...">
+                                    <img src="../images/projects/SIC/image3.jpg" class="d-block w-100" alt="...">
                                   </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="prev">
