--- a/domain_pages/society.html
+++ b/domain_pages/society.html
@@ -301,7 +301,7 @@
                                     VISION </h3>
                                 <div class="col-md-6 col-sm-12">
 
-                                    <p id="whatText">
+                                    <p id="whatTextDomains">
                                         NSS IIT Delhi maintains a blog website with the primary aim to spread awareness
                                         on a plethora of social causes including education, health, environment and
                                         society. Through this active project, we strive to provide correct information
@@ -309,7 +309,7 @@
                                     </p>
                                 </div>
                                 <div class="col-md-6 col-sm-12" style="text-align:center">
-                                    <img src="images/logo.png" id="aboutTeam1">
+                                    <img src="../images/projects/NSS Blog/image2.jpg" id="aboutTeam1">
                                 </div>
                             </div>
                             <hr style="width: 75%; margin-left: 12.5%;">
@@ -317,12 +317,12 @@
                                 <h3 class="head" id="about_head" style="font-family: 'Varela Round', sans-serif;">
                                     DESCRIPTION</h3>
                                 <div class="col-md-6 col-sm-12">
-                                    <img src="images/About Team.JPG" id="aboutTeam">
+                                    <img src="../images/projects/NSS Blog/image3.png" id="aboutTeam">
                                 </div>
 
                                 <div class="col-md-6 col-sm-12">
 
-                                    <p id="whatText">
+                                    <p id="whatTextDomains">
                                         Volunteers write regular content for the site, such as articles, satire pieces,
                                         comics, and poems. The articles can also be contributed to the site by anyone.
                                         The articles are required to be researched well and be free of political bias.
@@ -344,16 +344,21 @@
                                             data-bs-slide-to="1" aria-label="Slide 2"></button>
                                         <button type="button" data-bs-target="#carouselExampleIndicators"
                                             data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                        <button type="button" data-bs-target="#carouselExampleIndicators"
+                                            data-bs-slide-to="3" aria-label="Slide 4"></button>
                                     </div>
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img src="../images/vidya1.png" class="d-block w-100" alt="...">
+                                            <img src="../images/projects/NSS Blog/image1.png" class="d-block w-100" alt="...">
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="../images/vidya2.png" class="d-block w-100" alt="...">
+                                            <img src="../images/projects/NSS Blog/image2.jpg" class="d-block w-100" alt="...">
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="../images/vidya3.png" class="d-block w-100" alt="...">
+                                            <img src="../images/projects/NSS Blog/image3.png" class="d-block w-100" alt="...">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="../images/projects/NSS Blog/image4.png" class="d-block w-100" alt="...">
                                         </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button"
@@ -383,7 +388,7 @@
                                     VISION </h3>
                                 <div class="col-md-6 col-sm-12">
 
-                                    <p id="whatText">
+                                    <p id="whatTextDomains">
                                         Through this project, we try to analyse and sensitise people about questionable
                                         stereotypes and notions relating to gender and sex. We initiate discussions on
                                         topics like equality, stereotypes, and discrimination based on gender identity
@@ -391,7 +396,7 @@
                                     </p>
                                 </div>
                                 <div class="col-md-6 col-sm-12" style="text-align:center">
-                                    <img src="images/logo.png" id="aboutTeam1">
+                                    <img src="../images/projects/Gender Mainstreaming/image2.jpg" id="aboutTeam1">
                                 </div>
                             </div>
                             <hr style="width: 75%; margin-left: 12.5%;">
@@ -399,12 +404,12 @@
                                 <h3 id="about_head" style="font-family: 'Varela Round', sans-serif;">
                                     DESCRIPTION</h3>
                                 <div class="col-md-6 col-sm-12">
-                                    <img src="images/About Team.JPG" id="aboutTeam">
+                                    <img src="../images/projects/Gender Mainstreaming/image9.jpg" id="aboutTeam">
                                 </div>
 
                                 <div class="col-md-6 col-sm-12">
 
-                                    <p id="whatText">
+                                    <p id="whatTextDomains">
                                         The project primarily focuses on teaching about and sensitising people towards
                                         all the genders and clearing their myths and queries through fun and engaging
                                         activities with the help of experts in the field. The project tries to provide a
@@ -425,16 +430,46 @@
                                             data-bs-slide-to="1" aria-label="Slide 2"></button>
                                         <button type="button" data-bs-target="#carouselExampleIndicators1"
                                             data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                        <button type="button" data-bs-target="#carouselExampleIndicators1"
+                                            data-bs-slide-to="3" aria-label="Slide 4"></button>
+                                        <button type="button" data-bs-target="#carouselExampleIndicators1"
+                                            data-bs-slide-to="4" aria-label="Slide 5"></button>
+                                        <button type="button" data-bs-target="#carouselExampleIndicators1"
+                                            data-bs-slide-to="5" aria-label="Slide 6"></button>
+                                        <button type="button" data-bs-target="#carouselExampleIndicators1"
+                                            data-bs-slide-to="6" aria-label="Slide 7"></button>
+                                        <button type="button" data-bs-target="#carouselExampleIndicators1"
+                                            data-bs-slide-to="7" aria-label="Slide 8"></button>
+                                        <button type="button" data-bs-target="#carouselExampleIndicators1"
+                                            data-bs-slide-to="8" aria-label="Slide 9"></button>
                                     </div>
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img src="../images/vidya1.png" class="d-block w-100" alt="...">
+                                            <img src="../images/projects/Gender Mainstreaming/image1.jpg" class="d-block w-100" alt="...">
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="../images/vidya2.png" class="d-block w-100" alt="...">
+                                            <img src="../images/projects/Gender Mainstreaming/image2.jpg" class="d-block w-100" alt="...">
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="../images/vidya3.png" class="d-block w-100" alt="...">
+                                            <img src="../images/projects/Gender Mainstreaming/image3.jpg" class="d-block w-100" alt="...">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="../images/projects/Gender Mainstreaming/image4.jpg" class="d-block w-100" alt="...">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="../images/projects/Gender Mainstreaming/image5.jpg" class="d-block w-100" alt="...">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="../images/projects/Gender Mainstreaming/image6.jpg" class="d-block w-100" alt="...">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="../images/projects/Gender Mainstreaming/image7.png" class="d-block w-100" alt="...">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="../images/projects/Gender Mainstreaming/image8.png" class="d-block w-100" alt="...">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="../images/projects/Gender Mainstreaming/image9.jpg" class="d-block w-100" alt="...">
                                         </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button"
@@ -464,7 +499,7 @@
                                     VISION </h3>
                                 <div class="col-md-6 col-sm-12">
 
-                                    <p id="whatText">
+                                    <p id="whatTextDomains">
                                         The primary aim of the Old Age Home Project is to provide mental support and
                                         love to the elderly people residing in old age homes. Through this project, we
                                         want to make the students realise the importance of elderly people in our lives
@@ -486,7 +521,7 @@
 
                                 <div class="col-md-6 col-sm-12">
 
-                                    <p id="whatText">
+                                    <p id="whatTextDomains">
                                         In the offline tenure things used to be different and more impactful. In online
                                         tenure, we started a new initiative - “Letters of Hope” in which volunteers sent
                                         handwritten letters to them to provide them some emotional support. We also
@@ -551,13 +586,13 @@
                                     VISION </h3>
                                 <div class="col-md-6 col-sm-12">
 
-                                    <p id="whatText">
+                                    <p id="whatTextDomains">
                                         The vision of this project and find the policies which are applicable for them
                                         so their living conditions can improve.
                                     </p>
                                 </div>
                                 <div class="col-md-6 col-sm-12" style="text-align:center">
-                                    <img src="images/logo.png" id="aboutTeam1">
+                                    <img src="../images/projects/KYR/image1.png" id="aboutTeam1">
                                 </div>
                             </div>
                             <hr style="width: 75%; margin-left: 12.5%;">
@@ -565,12 +600,12 @@
                                 <h3 class="head" id="about_head" style="font-family: 'Varela Round', sans-serif;">
                                     DESCRIPTION</h3>
                                 <div class="col-md-6 col-sm-12">
-                                    <img src="images/About Team.JPG" id="aboutTeam">
+                                    <img src="../images/projects/KYR/image2.png" id="aboutTeam">
                                 </div>
 
                                 <div class="col-md-6 col-sm-12">
 
-                                    <p id="whatText">
+                                    <p id="whatTextDomains">
                                         We go to the slums near IIT Delhi and spread awareness regarding the government
                                         policies amongst underprivileged people through pamphlets, brochures and visits
                                         to slums. We also help people to fill the applications for several policies and
@@ -593,13 +628,13 @@
                                     </div>
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img src="../images/vidya1.png" class="d-block w-100" alt="...">
+                                            <img src="../images/projects/KYR/image1.png" class="d-block w-100" alt="...">
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="../images/vidya2.png" class="d-block w-100" alt="...">
+                                            <img src="../images/projects/KYR/image2.png" class="d-block w-100" alt="...">
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="../images/vidya3.png" class="d-block w-100" alt="...">
+                                            <img src="../images/projects/KYR/image3.png" class="d-block w-100" alt="...">
                                         </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button"
@@ -629,7 +664,7 @@
                                     VISION </h3>
                                 <div class="col-md-6 col-sm-12">
 
-                                    <p id="whatText">
+                                    <p id="whatTextDomains">
                                         The project Green Warriors is aimed towards the betterment of the environment by
                                         raising awareness and by conducting on-ground activities to make the campus
                                         greener. We also focus on the less-known issues like the effects of E-waste and
@@ -650,7 +685,7 @@
 
                                 <div class="col-md-6 col-sm-12">
 
-                                    <p id="whatText">
+                                    <p id="whatTextDomains">
                                         In this project, we sensitize people about environment conservation
                                         sustainability issues as well as present solutions to their day-to-day wastage
                                         problems and connect them to nature. Along with a group of enthusiastic
