--- a/domain_pages/society.html
+++ b/domain_pages/society.html
@@ -309,7 +309,7 @@
                                     </p>
                                 </div>
                                 <div class="col-md-6 col-sm-12" style="text-align:center">
-                                    <img src="../images/projects/NSS Blog/image2.jpg" id="aboutTeam1">
+                                    <img src="../images/projects/NSS Blog/image2.jpg" id="imagesModal">
                                 </div>
                             </div>
                             <hr style="width: 75%; margin-left: 12.5%;">
@@ -317,7 +317,7 @@
                                 <h3 class="head" id="about_head" style="font-family: 'Varela Round', sans-serif;">
                                     DESCRIPTION</h3>
                                 <div class="col-md-6 col-sm-12">
-                                    <img src="../images/projects/NSS Blog/image3.png" id="aboutTeam">
+                                    <img src="../images/projects/NSS Blog/image3.png" id="imagesModal">
                                 </div>
 
                                 <div class="col-md-6 col-sm-12">
@@ -396,7 +396,7 @@
                                     </p>
                                 </div>
                                 <div class="col-md-6 col-sm-12" style="text-align:center">
-                                    <img src="../images/projects/Gender Mainstreaming/image2.jpg" id="aboutTeam1">
+                                    <img src="../images/projects/Gender Mainstreaming/image2.jpg" id="imagesModal">
                                 </div>
                             </div>
                             <hr style="width: 75%; margin-left: 12.5%;">
@@ -404,7 +404,7 @@
                                 <h3 id="about_head" style="font-family: 'Varela Round', sans-serif;">
                                     DESCRIPTION</h3>
                                 <div class="col-md-6 col-sm-12">
-                                    <img src="../images/projects/Gender Mainstreaming/image9.jpg" id="aboutTeam">
+                                    <img src="../images/projects/Gender Mainstreaming/image9.jpg" id="imagesModal">
                                 </div>
 
                                 <div class="col-md-6 col-sm-12">
@@ -508,7 +508,7 @@
                                     </p>
                                 </div>
                                 <div class="col-md-6 col-sm-12" style="text-align:center">
-                                    <img src="images/logo.png" id="aboutTeam1">
+                                    <img src="images/logo.png" id="imagesModal">
                                 </div>
                             </div>
                             <hr style="width: 75%; margin-left: 12.5%;">
@@ -516,7 +516,7 @@
                                 <h3 class="head" id="about_head" style="font-family: 'Varela Round', sans-serif;">
                                     DESCRIPTION</h3>
                                 <div class="col-md-6 col-sm-12">
-                                    <img src="images/About Team.JPG" id="aboutTeam">
+                                    <img src="images/About Team.JPG" id="imagesModal">
                                 </div>
 
                                 <div class="col-md-6 col-sm-12">
@@ -592,7 +592,7 @@
                                     </p>
                                 </div>
                                 <div class="col-md-6 col-sm-12" style="text-align:center">
-                                    <img src="../images/projects/KYR/image1.png" id="aboutTeam1">
+                                    <img src="../images/projects/KYR/image1.png" id="imagesModal">
                                 </div>
                             </div>
                             <hr style="width: 75%; margin-left: 12.5%;">
@@ -600,7 +600,7 @@
                                 <h3 class="head" id="about_head" style="font-family: 'Varela Round', sans-serif;">
                                     DESCRIPTION</h3>
                                 <div class="col-md-6 col-sm-12">
-                                    <img src="../images/projects/KYR/image2.png" id="aboutTeam">
+                                    <img src="../images/projects/KYR/image2.png" id="imagesModal">
                                 </div>
 
                                 <div class="col-md-6 col-sm-12">
@@ -672,7 +672,7 @@
                                     </p>
                                 </div>
                                 <div class="col-md-6 col-sm-12" style="text-align:center">
-                                    <img src="images/logo.png" id="aboutTeam1">
+                                    <img src="images/logo.png" id="imagesModal">
                                 </div>
                             </div>
                             <hr style="width: 75%; margin-left: 12.5%;">
@@ -680,7 +680,7 @@
                                 <h3 class="head" id="about_head" style="font-family: 'Varela Round', sans-serif;">
                                     DESCRIPTION</h3>
                                 <div class="col-md-6 col-sm-12">
-                                    <img src="images/About Team.JPG" id="aboutTeam">
+                                    <img src="images/About Team.JPG" id="imagesModal">
                                 </div>
 
                                 <div class="col-md-6 col-sm-12">
