--- a/newTeamPage/index.html
+++ b/newTeamPage/index.html
@@ -9,7 +9,7 @@ html, body {
   font-family: Helvetica, sans-serif;
 }
 body {
-  background: #25303B;
+    background: linear-gradient(120deg, #e671a5 0%, #ffcfa9 70%);
 }
 section#timeline {
   width: 80%;
@@ -56,10 +56,13 @@ section#timeline article div.inner span.date {
   font-size: 12px;
   font-weight: 900;
   text-transform: uppercase;
-  background: #25303B;
-  color: rgba(255,255,255,0.5);
+  /* background: #25303B; */
+  background: #6c63ff;
+  color: rgb(52, 30, 59);
+  /* color: rgba(255,255,255,0.5); */
   border: 2px solid rgba(255,255,255,0.2);
-  box-shadow: 0 0 0 7px #25303B;
+  box-shadow: 0 0 0 7px #6c63ff;
+  /* box-shadow: 0 0 0 7px #25303B; */
 }
 section#timeline article div.inner span.date span {
   display: block;
@@ -69,7 +72,7 @@ section#timeline article div.inner span.date span.day {
   font-size: 10px;
 }
 section#timeline article div.inner span.date span.month {
-  font-size: 18px;
+  font-size: 16px;
 }
 section#timeline article div.inner span.date span.year {
   font-size: 10px;
@@ -145,9 +148,10 @@ section#timeline article:nth-child(5) div.inner h2:after {
         <article>
           <div class="inner">
             <span class="date">
-              <span class="day">30<sup>th</sup></span>
-              <span class="month">Jan</span>
-              <span class="year">2014</span>
+              <!-- <span class="day">30<sup>th</sup></span> -->
+              <span class="day">Team</span>
+              <span class="month">2022-23</span>
+              <!-- <span class="year">23</span> -->
             </span>
             <h2>The Title</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis rutrum nunc, eget dictum massa. Nam faucibus felis nec augue adipiscing, eget commodo libero mattis.</p>
@@ -156,9 +160,8 @@ section#timeline article:nth-child(5) div.inner h2:after {
         <article>
           <div class="inner">
             <span class="date">
-              <span class="day">26<sup>th</sup></span>
-              <span class="month">Jan</span>
-              <span class="year">2014</span>
+                <span class="day">Team</span>
+                <span class="month">2021-22</span>
             </span>
             <h2>The Title</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis rutrum nunc, eget dictum massa. Nam faucibus felis nec augue adipiscing, eget commodo libero mattis.</p>
@@ -167,9 +170,8 @@ section#timeline article:nth-child(5) div.inner h2:after {
         <article>
           <div class="inner">
             <span class="date">
-              <span class="day">26<sup>th</sup></span>
-              <span class="month">Jan</span>
-              <span class="year">2014</span>
+                <span class="day">Team</span>
+                <span class="month">2020-21</span>
             </span>
             <h2>The Title</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis rutrum nunc, eget dictum massa. Nam faucibus felis nec augue adipiscing, eget commodo libero mattis.</p>
@@ -178,9 +180,8 @@ section#timeline article:nth-child(5) div.inner h2:after {
         <article>
           <div class="inner">
             <span class="date">
-              <span class="day">26<sup>th</sup></span>
-              <span class="month">Jan</span>
-              <span class="year">2014</span>
+                <span class="day">Team</span>
+                <span class="month">2019-20</span>
             </span>
             <h2>The Title</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis rutrum nunc, eget dictum massa. Nam faucibus felis nec augue adipiscing, eget commodo libero mattis.</p>
@@ -189,9 +190,8 @@ section#timeline article:nth-child(5) div.inner h2:after {
         <article>
           <div class="inner">
             <span class="date">
-              <span class="day">26<sup>th</sup></span>
-              <span class="month">Jan</span>
-              <span class="year">2014</span>
+                <span class="day">Team</span>
+                <span class="month">2018-19</span>
             </span>
             <h2>The Title</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis rutrum nunc, eget dictum massa. Nam faucibus felis nec augue adipiscing, eget commodo libero mattis.</p>
