--- a/newTeamPage/index.html
+++ b/newTeamPage/index.html
@@ -4,12 +4,12 @@
 <head>
     <style>
 html, body {
-  margin: 0;
+  margin: 2% 0 0 0;
   padding: 0;
   font-family: Helvetica, sans-serif;
 }
 body {
-    background: linear-gradient(120deg, #e671a5 0%, #ffcfa9 70%);
+    background: #f4f6fa;
 }
 section#timeline {
   width: 80%;
@@ -23,9 +23,10 @@ section#timeline:before {
   left: 50%;
   top: 0;
   margin: 0 0 0 -1px;
-  width: 2px;
+  width: 0.2%;
   height: 100%;
-  background: rgba(255,255,255,0.2);
+  /* background: rgba(255,255,255,0.2); */
+  background: rgba(0,0,0,.1);
 }
 section#timeline article {
   width: 100%;
@@ -45,8 +46,8 @@ section#timeline article div.inner {
 }
 section#timeline article div.inner span.date {
   display: block;
-  width: 60px;
-  height: 50px;
+  width: auto;
+  height: auto;
   padding: 5px 0;
   position: absolute;
   top: 0;
@@ -57,11 +58,11 @@ section#timeline article div.inner span.date {
   font-weight: 900;
   text-transform: uppercase;
   /* background: #25303B; */
-  background: #6c63ff;
-  color: rgb(52, 30, 59);
+  background: #f4f6fa;
+  color: #36434d;
   /* color: rgba(255,255,255,0.5); */
   border: 2px solid rgba(255,255,255,0.2);
-  box-shadow: 0 0 0 7px #6c63ff;
+  box-shadow: 0 0 0 7px #f4f6fa;
   /* box-shadow: 0 0 0 7px #25303B; */
 }
 section#timeline article div.inner span.date span {
@@ -140,6 +141,24 @@ section#timeline article:nth-child(5) div.inner h2 {
 section#timeline article:nth-child(5) div.inner h2:after {
   background: #9b59b6;
 }
+section#timeline article:nth-child(7) div.inner h2 {
+  background: #2ecc71;
+}
+section#timeline article:nth-child(7) div.inner h2:after {
+  background: #2ecc71;
+}
+section#timeline article:nth-child(8) div.inner h2 {
+  background: #e67e22;
+}
+section#timeline article:nth-child(8) div.inner h2:after {
+  background: #e67e22;
+}
+section#timeline article:nth-child(6) div.inner h2 {
+  background: #e74c3c;
+}
+section#timeline article:nth-child(6) div.inner h2:after {
+  background: #e74c3c;
+}
     </style>
 </head>
 
@@ -154,7 +173,7 @@ section#timeline article:nth-child(5) div.inner h2:after {
               <!-- <span class="year">23</span> -->
             </span>
             <h2>The Title</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis rutrum nunc, eget dictum massa. Nam faucibus felis nec augue adipiscing, eget commodo libero mattis.</p>
+            <p><br></p>
           </div>
         </article>
         <article>
@@ -164,7 +183,7 @@ section#timeline article:nth-child(5) div.inner h2:after {
                 <span class="month">2021-22</span>
             </span>
             <h2>The Title</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis rutrum nunc, eget dictum massa. Nam faucibus felis nec augue adipiscing, eget commodo libero mattis.</p>
+            <p><br></p>
           </div>
         </article>
         <article>
@@ -174,7 +193,7 @@ section#timeline article:nth-child(5) div.inner h2:after {
                 <span class="month">2020-21</span>
             </span>
             <h2>The Title</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis rutrum nunc, eget dictum massa. Nam faucibus felis nec augue adipiscing, eget commodo libero mattis.</p>
+            <p><br></p>
           </div>
         </article>
         <article>
@@ -184,7 +203,7 @@ section#timeline article:nth-child(5) div.inner h2:after {
                 <span class="month">2019-20</span>
             </span>
             <h2>The Title</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis rutrum nunc, eget dictum massa. Nam faucibus felis nec augue adipiscing, eget commodo libero mattis.</p>
+            <p><br></p>
           </div>
         </article>
         <article>
@@ -194,7 +213,37 @@ section#timeline article:nth-child(5) div.inner h2:after {
                 <span class="month">2018-19</span>
             </span>
             <h2>The Title</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis rutrum nunc, eget dictum massa. Nam faucibus felis nec augue adipiscing, eget commodo libero mattis.</p>
+            <p><br></p>
+          </div>
+        </article>
+        <article>
+          <div class="inner">
+            <span class="date">
+                <span class="day">Team</span>
+                <span class="month">2017-18</span>
+            </span>
+            <h2>The Title</h2>
+            <p><br></p>
+          </div>
+        </article>
+        <article>
+          <div class="inner">
+            <span class="date">
+                <span class="day">Team</span>
+                <span class="month">2016-17</span>
+            </span>
+            <h2>The Title</h2>
+            <p><br></p>
+          </div>
+        </article>
+        <article>
+          <div class="inner">
+            <span class="date">
+                <span class="day">Team</span>
+                <span class="month">2015-16</span>
+            </span>
+            <h2>The Title</h2>
+            <p><br></p>
           </div>
         </article>
       </section>
